# serializer version: 1
# name: test_endpoint_snapshot[aapl_band_1d]
  dict({
    'dict:data': dict({
      'dtypes': dict({
        'data': 'list',
        'horizons': 'list',
        'model_id': 'str',
        'rows': 'int',
        'slot': 'str',
        'source_cp': 'str',
        'ticker': 'str',
      }),
      'keys': list([
        'data',
        'horizons',
        'model_id',
        'rows',
        'slot',
        'source_cp',
        'ticker',
      ]),
    }),
    'dict:meta': dict({
      'dtypes': dict({
        'request_id': 'str',
      }),
      'keys': list([
        'request_id',
      ]),
    }),
    'payload_type': 'dict',
    'status_code': 200,
    'top_level_dtypes': dict({
      'data': 'dict',
      'meta': 'dict',
    }),
    'top_level_keys': list([
      'data',
      'meta',
    ]),
  })
# ---
# name: test_endpoint_snapshot[aapl_band_1w]
  dict({
    'dict:data': dict({
      'dtypes': dict({
        'data': 'list',
        'horizons': 'list',
        'model_id': 'str',
        'rows': 'int',
        'slot': 'str',
        'source_cp': 'str',
        'ticker': 'str',
      }),
      'keys': list([
        'data',
        'horizons',
        'model_id',
        'rows',
        'slot',
        'source_cp',
        'ticker',
      ]),
    }),
    'dict:meta': dict({
      'dtypes': dict({
        'request_id': 'str',
      }),
      'keys': list([
        'request_id',
      ]),
    }),
    'payload_type': 'dict',
    'status_code': 200,
    'top_level_dtypes': dict({
      'data': 'dict',
      'meta': 'dict',
    }),
    'top_level_keys': list([
      'data',
      'meta',
    ]),
  })
# ---
# name: test_endpoint_snapshot[aapl_indicators]
  dict({
    'dict:data': dict({
      'dtypes': dict({
        'data': 'list',
        'ticker': 'str',
        'timeframe': 'str',
      }),
      'keys': list([
        'data',
        'ticker',
        'timeframe',
      ]),
    }),
    'dict:meta': dict({
      'dtypes': dict({
        'request_id': 'str',
      }),
      'keys': list([
        'request_id',
      ]),
    }),
    'payload_type': 'dict',
    'status_code': 200,
    'top_level_dtypes': dict({
      'data': 'dict',
      'meta': 'dict',
    }),
    'top_level_keys': list([
      'data',
      'meta',
    ]),
  })
# ---
# name: test_endpoint_snapshot[aapl_line]
  dict({
    'dict:data': dict({
      'dtypes': dict({
        'data': 'list',
        'model_id': 'str',
        'rows': 'int',
        'slot': 'str',
        'source_cp': 'str',
        'ticker': 'str',
      }),
      'keys': list([
        'data',
        'model_id',
        'rows',
        'slot',
        'source_cp',
        'ticker',
      ]),
    }),
    'dict:meta': dict({
      'dtypes': dict({
        'request_id': 'str',
      }),
      'keys': list([
        'request_id',
      ]),
    }),
    'payload_type': 'dict',
    'status_code': 200,
    'top_level_dtypes': dict({
      'data': 'dict',
      'meta': 'dict',
    }),
    'top_level_keys': list([
      'data',
      'meta',
    ]),
  })
# ---
# name: test_endpoint_snapshot[aapl_prices]
  dict({
    'dict:data': dict({
      'dtypes': dict({
        'data': 'list',
        'end': 'str',
        'start': 'str',
        'ticker': 'str',
        'timeframe': 'str',
      }),
      'keys': list([
        'data',
        'end',
        'start',
        'ticker',
        'timeframe',
      ]),
    }),
    'dict:meta': dict({
      'dtypes': dict({
        'request_id': 'str',
      }),
      'keys': list([
        'request_id',
      ]),
    }),
    'payload_type': 'dict',
    'status_code': 200,
    'top_level_dtypes': dict({
      'data': 'dict',
      'meta': 'dict',
    }),
    'top_level_keys': list([
      'data',
      'meta',
    ]),
  })
# ---
# name: test_endpoint_snapshot[aapl_product_history]
  dict({
    'dict:data': dict({
      'dtypes': dict({
        'band_history': 'list',
        'empty_reason': 'null',
        'latest_asof_date': 'str',
        'line_history': 'list',
        'manifest_summary': 'dict',
        'source': 'str',
        'ticker': 'str',
        'timeframe': 'str',
      }),
      'keys': list([
        'band_history',
        'empty_reason',
        'latest_asof_date',
        'line_history',
        'manifest_summary',
        'source',
        'ticker',
        'timeframe',
      ]),
    }),
    'dict:meta': dict({
      'dtypes': dict({
        'request_id': 'str',
        'total': 'int',
      }),
      'keys': list([
        'request_id',
        'total',
      ]),
    }),
    'payload_type': 'dict',
    'status_code': 200,
    'top_level_dtypes': dict({
      'data': 'dict',
      'meta': 'dict',
    }),
    'top_level_keys': list([
      'data',
      'meta',
    ]),
  })
# ---
# name: test_endpoint_snapshot[backtest_aapl]
  dict({
    'dict:data': dict({
      'dtypes': dict({
        'averageHoldingDays': 'float',
        'avoidedLargeLossDays': 'int',
        'buyHoldMaxDrawdownPct': 'float',
        'buyHoldReturnPct': 'float',
        'buyHoldReturnRatio': 'float',
        'buyHoldSharpe': 'float',
        'buyHoldSortino': 'float',
        'cashWaitRatio': 'float',
        'excessReturnPct': 'float',
        'feeAdjustedReturnPct': 'float',
        'feeAdjustedSharpe': 'float',
        'largeLossAvoidanceRate': 'float',
        'largeLossDays': 'int',
        'largeLossThresholdPct': 'float',
        'marketParticipationRate': 'float',
        'maxDrawdownImprovementPct': 'float',
        'maxDrawdownPct': 'float',
        'points': 'list',
        'signals': 'list',
        'strategyReturnPct': 'float',
        'strategySortino': 'float',
        'tradeCount': 'int',
        'tradeEvents': 'list',
        'worstTradeLossPct': 'null',
      }),
      'keys': list([
        'averageHoldingDays',
        'avoidedLargeLossDays',
        'buyHoldMaxDrawdownPct',
        'buyHoldReturnPct',
        'buyHoldReturnRatio',
        'buyHoldSharpe',
        'buyHoldSortino',
        'cashWaitRatio',
        'excessReturnPct',
        'feeAdjustedReturnPct',
        'feeAdjustedSharpe',
        'largeLossAvoidanceRate',
        'largeLossDays',
        'largeLossThresholdPct',
        'marketParticipationRate',
        'maxDrawdownImprovementPct',
        'maxDrawdownPct',
        'points',
        'signals',
        'strategyReturnPct',
        'strategySortino',
        'tradeCount',
        'tradeEvents',
        'worstTradeLossPct',
      ]),
    }),
    'dict:meta': dict({
      'dtypes': dict({
        'request_id': 'str',
      }),
      'keys': list([
        'request_id',
      ]),
    }),
    'payload_type': 'dict',
    'status_code': 200,
    'top_level_dtypes': dict({
      'data': 'dict',
      'meta': 'dict',
    }),
    'top_level_keys': list([
      'data',
      'meta',
    ]),
  })
# ---
# name: test_endpoint_snapshot[scan_indicator]
  dict({
    'dict:data': dict({
      'dtypes': dict({
        'aggregateMetrics': 'dict',
        'asofDate': 'str',
        'cards': 'list',
        'contract': 'str',
        'latestValidTickerCount': 'int',
        'portfolioMetrics': 'dict',
        'scopeTickerCount': 'int',
        'strategyId': 'str',
        'strategyLabel': 'str',
        'timeframe': 'str',
        'usableSignalCount': 'int',
      }),
      'keys': list([
        'aggregateMetrics',
        'asofDate',
        'cards',
        'contract',
        'latestValidTickerCount',
        'portfolioMetrics',
        'scopeTickerCount',
        'strategyId',
        'strategyLabel',
        'timeframe',
        'usableSignalCount',
      ]),
    }),
    'dict:meta': dict({
      'dtypes': dict({
        'request_id': 'str',
        'total': 'int',
      }),
      'keys': list([
        'request_id',
        'total',
      ]),
    }),
    'payload_type': 'dict',
    'status_code': 200,
    'top_level_dtypes': dict({
      'data': 'dict',
      'meta': 'dict',
    }),
    'top_level_keys': list([
      'data',
      'meta',
    ]),
  })
# ---
# name: test_endpoint_snapshot[stocks_list]
  dict({
    'dict:meta': dict({
      'dtypes': dict({
        'request_id': 'str',
        'total': 'int',
      }),
      'keys': list([
        'request_id',
        'total',
      ]),
    }),
    'list:data': dict({
      'len': 50,
      'row_schema': dict({
        'industry': 'str',
        'market_cap': 'float',
        'sector': 'str',
        'ticker': 'str',
      }),
    }),
    'payload_type': 'dict',
    'status_code': 200,
    'top_level_dtypes': dict({
      'data': 'list',
      'meta': 'dict',
    }),
    'top_level_keys': list([
      'data',
      'meta',
    ]),
  })
# ---
